--- a/index.html
+++ b/index.html
@@ -211,44 +211,75 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Ce que nous proposons</h2>
+        <p>L'ENIET de Ngaoundéré est composé de deux niveaux: le <b>Niveau 1</b> et le <b>Niveau 2</b>. Ces niveaux sont divisés en différentes filières.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
-
         <div class="row gy-4">
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-activity icon"></i></div>
-              <h4><a href="" class="stretched-link">Pédagogie</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <div class="new_icon"><img src="../assets/macon2.png" alt="maçon icon"></div>
+              <h4><a href="" class="stretched-link">MACO</a></h4>
+              <p><b>Maconnerie:</b> Nous donnons à nos apprenants les outils nécessaires pour enseigner tous les aspects de la construction d'habitations</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-bounding-box-circles icon"></i></div>
-              <h4><a href="" class="stretched-link">Informatique générale</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <div class="new_icon"><img src="../assets/carpenter.png" alt="menuiserie bois icon"></div>
+              <h4><a href="" class="stretched-link">MENU-BOIS</a></h4>
+              <p><b>Menuiserie Bois:</b> Savoir travailler le bois est un art que nos apprenants sont capable d'inculquer à leur futurs élèves</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
-              <h4><a href="" class="stretched-link">Psychologie de l'enfant</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <div class="new_icon"><img src="../assets/ouvrage_métallique.png" alt="menuiserie bois icon"></div>
+              <h4><a href="" class="stretched-link">COOM</a></h4>
+              <p><b>COnstruction d'Ouvrage Métallique:</b> Il est important de pouvoir manipuler les matériaux métalliques.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
-              <h4><a href="" class="stretched-link">Administration scolaire</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <div class="new_icon"><img src="../assets/comptabilité.png" alt="menuiserie bois icon"></div>
+              <h4><a href="" class="stretched-link">ESCOM</a></h4>
+              <p><b>Employé des Services Comptables:</b> Nos apprenants sont outillés pour former des comptables qualifiés et prêts à l'emploi</p>
             </div>
           </div><!-- End Service Item -->
 
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-item position-relative">
+              <div class="new_icon"><img src="../assets/électricité.png" alt="maçon icon"></div>
+              <h4><a href="" class="stretched-link">ELEQ</a></h4>
+              <p><b>Électricité d'équipements:</b> Cette filière est indispensable pour savoir parer gérer les équipements qui ont besoin d'électricité</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
+            <div class="service-item position-relative">
+              <div class="new_icon"><img src="../assets/ESF.png" alt="menuiserie bois icon"></div>
+              <h4><a href="" class="stretched-link">ESF</a></h4>
+              <p><b>Économie Sociale et Familiale:</b> Nos apprenants connaissent toutes les techniques pour prendre soin d'un domicile et de ses occupants</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-item position-relative">
+              <div class="new_icon"><img src="../assets/9859783_craft_sewing_machine_tailor_tailoring_icon.png" alt="menuiserie bois icon"></div>
+              <h4><a href="" class="stretched-link">COME</a></h4>
+              <p><b>COuture sur MEsure:</b> Former les apprenants à toutes les techniques de couture classique et de haute couture</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
+            <div class="service-item position-relative">
+              <div class="new_icon"><img src="../assets/management.png" alt="menuiserie bois icon"></div>
+              <h4><a href="" class="stretched-link">ESAA</a></h4>
+              <p><b>Employé des Services Administratifs et d'Accueil:</b> Aspect incontournable dans les entreprises, cette filière donne à nos apprenants les clés pour répondre au besoin du marché de l'enseignement</p>
+            </div>
+          </div><!-- End Service Item -->
         </div>
 
       </div>
@@ -265,7 +296,7 @@
           <div class="col-xl-10">
             <div class="text-center">
               <h3>Contactez-nous</h3>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Prenez contact avec nous pour connaitre toutes les modalités afin d'accéder à une formation de qualité ou pour faire partie de notre administration</p>
               <a class="cta-btn" href="#contact">Cliquez ici</a>
             </div>
           </div>
@@ -274,55 +305,13 @@
 
     </section><!-- /Call To Action Section -->
 
-    <!-- More Services Section -->
-    <section id="more-services" class="more-services section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Plus de Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="card">
-              <img src="assets/img/accompagnement.jpeg" class="img-fluid" alt="">
-              <h3>Accompagnement</h3>
-              <p>Eum ad dolor et. Autem aut fugiat debitis voluptatem consequuntur sit. Et veritatis id.</p>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="card">
-              <img src="assets/img/femme_cahier.jpg" class="img-fluid" alt="">
-              <h3>Discipline et abnégation</h3>
-              <p>Repudiandae amet nihil natus in distinctio suscipit id. Doloremque ducimus ea sit non.</p>
-            </div>
-          </div><!-- End Card Item -->
-
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="card">
-              <img src="assets/img/classe.jpg" class="img-fluid" alt="">
-              <h3>Evaluation et suivi</h3>
-              <p>Quam rem vitae est autem molestias explicabo debitis sint. Vero aliquid quidem commodi.</p>
-            </div>
-          </div><!-- End Card Item -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /More Services Section -->
-
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Nos activités</h2>
+        <p>Durant l'année, apprenants et administration participent à des activités diverses et variées. Découvrez quelque unes d'entre elles</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -463,6 +452,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Découvrez notre administration</h2>
+        <p>Nous vous présentons ceux qui eouvrent au quotidien pour que les enseignements soient de qualité et que les élèves-maitres formés répondre au besoin du marché </p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -475,7 +465,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Nom</h4>
-                  <span>Proviseur</span>
+                  <span>Directeur</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter-x"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -492,7 +482,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Nom</h4>
-                  <span>Censeur 1</span>
+                  <span>Directeur adjoint</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter-x"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -509,7 +499,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Nom</h4>
-                  <span>Censeur 2</span>
+                  <span>Responsable Service de la Scolarité</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter-x"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -526,7 +516,7 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Nom</h4>
-                  <span>Surveillant Général</span>
+                  <span>Responsable Service de la documentation</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter-x"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -562,8 +552,7 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Addresse</h3>
-                  <p>Baladji 2</p>
-                  <p>Ngaoundéré, Cameroun</p>
+                  <p>B.P 472 Ngaoundéré, Cameroun</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -571,8 +560,7 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
                   <h3>Téléphone</h3>
-                  <p>+237 655 666 777</p>
-                  <p>+237 699 888 000</p>
+                  <p>+237 222 178 820</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -580,7 +568,7 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="400">
                   <i class="bi bi-envelope"></i>
                   <h3>Email</h3>
-                  <p>eniegndere@gmail.com</p>
+                  <p>enietndere@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -640,7 +628,7 @@
   <footer id="footer" class="footer dark-background">
 
       <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename"> - Enieg Ngaoundéré</strong> <span> - Tous droits réservés</span></p>
+      <p>© <span>Copyright - </span> <strong class="px-1 sitename">Eniet Ngaoundéré</strong> <span> - Tous droits réservés</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
