--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
-              <div class="new_icon"><img src="../assets/macon2.png" alt="maçon icon"></div>
+              <div class="new_icon"><img src="assets/img/macon2.png" alt="maçon icon"></div>
               <h4><a href="" class="stretched-link">MACO</a></h4>
               <p><b>Maconnerie:</b> Nous donnons à nos apprenants les outils nécessaires pour enseigner tous les aspects de la construction d'habitations</p>
             </div>
@@ -227,7 +227,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
-              <div class="new_icon"><img src="../assets/carpenter.png" alt="menuiserie bois icon"></div>
+              <div class="new_icon"><img src="assets/img/carpenter.png" alt="menuiserie bois icon"></div>
               <h4><a href="" class="stretched-link">MENU-BOIS</a></h4>
               <p><b>Menuiserie Bois:</b> Savoir travailler le bois est un art que nos apprenants sont capable d'inculquer à leur futurs élèves</p>
             </div>
@@ -235,7 +235,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
-              <div class="new_icon"><img src="../assets/ouvrage_métallique.png" alt="menuiserie bois icon"></div>
+              <div class="new_icon"><img src="assets/img/ouvrage_métallique.png" alt="menuiserie bois icon"></div>
               <h4><a href="" class="stretched-link">COOM</a></h4>
               <p><b>COnstruction d'Ouvrage Métallique:</b> Il est important de pouvoir manipuler les matériaux métalliques.</p>
             </div>
@@ -243,7 +243,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="new_icon"><img src="../assets/comptabilité.png" alt="menuiserie bois icon"></div>
+              <div class="new_icon"><img src="assets/img/comptabilité.png" alt="menuiserie bois icon"></div>
               <h4><a href="" class="stretched-link">ESCOM</a></h4>
               <p><b>Employé des Services Comptables:</b> Nos apprenants sont outillés pour former des comptables qualifiés et prêts à l'emploi</p>
             </div>
@@ -251,7 +251,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
-              <div class="new_icon"><img src="../assets/électricité.png" alt="maçon icon"></div>
+              <div class="new_icon"><img src="assets/img/électricité.png" alt="maçon icon"></div>
               <h4><a href="" class="stretched-link">ELEQ</a></h4>
               <p><b>Électricité d'équipements:</b> Cette filière est indispensable pour savoir parer gérer les équipements qui ont besoin d'électricité</p>
             </div>
@@ -259,7 +259,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
-              <div class="new_icon"><img src="../assets/ESF.png" alt="menuiserie bois icon"></div>
+              <div class="new_icon"><img src="assets/img/ESF.png" alt="menuiserie bois icon"></div>
               <h4><a href="" class="stretched-link">ESF</a></h4>
               <p><b>Économie Sociale et Familiale:</b> Nos apprenants connaissent toutes les techniques pour prendre soin d'un domicile et de ses occupants</p>
             </div>
@@ -267,7 +267,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
-              <div class="new_icon"><img src="../assets/9859783_craft_sewing_machine_tailor_tailoring_icon.png" alt="menuiserie bois icon"></div>
+              <div class="new_icon"><img src="assets/img/9859783_craft_sewing_machine_tailor_tailoring_icon.png" alt="menuiserie bois icon"></div>
               <h4><a href="" class="stretched-link">COME</a></h4>
               <p><b>COuture sur MEsure:</b> Former les apprenants à toutes les techniques de couture classique et de haute couture</p>
             </div>
@@ -275,7 +275,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="new_icon"><img src="../assets/management.png" alt="menuiserie bois icon"></div>
+              <div class="new_icon"><img src="assets/img/management.png" alt="menuiserie bois icon"></div>
               <h4><a href="" class="stretched-link">ESAA</a></h4>
               <p><b>Employé des Services Administratifs et d'Accueil:</b> Aspect incontournable dans les entreprises, cette filière donne à nos apprenants les clés pour répondre au besoin du marché de l'enseignement</p>
             </div>
