--- a/index.html
+++ b/index.html
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Shuffle
-  * Template URL: https://bootstrapmade.com/bootstrap-3-one-page-template-free-shuffle/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
@@ -42,8 +34,6 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
          <img src="../Shuffle/assets/img/logo_eniet.jpg" alt="">
          <h5 class="sitename"><b>ENIET NGAOUNDÉRÉ</b></h5>
       </a>
@@ -170,7 +160,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="169" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="3750" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Apprenants formés</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -178,7 +168,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="157" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="3750" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Diplômes obtenus</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -194,7 +184,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="42" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Enseignants qualifiés</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -451,87 +441,91 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Découvrez notre administration</h2>
-        <p>Nous vous présentons ceux qui eouvrent au quotidien pour que les enseignements soient de qualité et que les élèves-maitres formés répondre au besoin du marché </p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="member">
-              <img src="assets/img/team/User.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Nom</h4>
-                  <span>Directeur</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="member">
-              <img src="assets/img/team/User.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Nom</h4>
-                  <span>Directeur adjoint</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="member">
-              <img src="assets/img/team/User.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Nom</h4>
-                  <span>Responsable Service de la Scolarité</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="member">
-              <img src="assets/img/team/User.png" class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Nom</h4>
-                  <span>Responsable Service de la documentation</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-        </div>
-
+          <h2>Découvrez notre administration</h2>
+          <p>Nous vous présentons ceux qui œuvrent au quotidien pour que les enseignements soient de qualité et que les élèves-maîtres formés répondent aux besoins du marché.</p>
       </div>
-
-    </section><!-- /Team Section -->
+  
+      <div class="container">
+          <div class="row gy-5 justify-content-center mb-4">
+              <!-- Directeur -->
+              <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                  <div class="member open-popup" data-member="directeur">
+                      <img src="assets/img/team/directeur.jpg" class="img-fluid" alt="">
+                      <div class="member-info">
+                          <div class="member-info-content">
+                              <h4>Mr KOUSSIAKBE JEAN</h4>
+                              <span>Directeur</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+  
+          <div class="row gy-5 justify-content-center mt-4">
+              <!-- Directeur adjoint -->
+              <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                  <div class="member open-popup" data-member="directeur_adjoint">
+                      <img src="assets/img/team/directeur_adjoint.jpg" class="img-fluid" alt="">
+                      <div class="member-info">
+                          <div class="member-info-content">
+                              <h4>Mr OUMAROU JEAN CLEMENT</h4>
+                              <span>Directeur adjoint</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Chef service de la scolarité -->
+              <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
+                  <div class="member open-popup" data-member="scolarite">
+                      <img src="assets/img/team/scolarité.jpg" class="img-fluid" alt="">
+                      <div class="member-info">
+                          <div class="member-info-content">
+                              <h4>Mr LOUBA FRANCK</h4>
+                              <span>Chef service de la scolarité et de la documentation</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Chef service des études -->
+              <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
+                  <div class="member open-popup" data-member="etudes">
+                      <img src="assets/img/team/service_étude.jpg" class="img-fluid" alt="">
+                      <div class="member-info">
+                          <div class="member-info-content">
+                              <h4>Mr GARGA ALAIN RICHARD</h4>
+                              <span>Chef service des études et des stages</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+  
+              <!-- Chef service du matériel -->
+              <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
+                  <div class="member open-popup" data-member="materiel">
+                      <img src="assets/img/team/service_matériel.jpg" class="img-fluid" alt="">
+                      <div class="member-info">
+                          <div class="member-info-content">
+                              <h4>Mme MPAMI YOMI FLORENCE</h4>
+                              <span>Chef service du matériel, de la maintenance et des infrastructures</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  
+  </section>
+  
+  <!-- Pop-up Global -->
+  <div id="popupModal" class="popup">
+      <div class="popup-content">
+          <span class="close-btn" id="closePopup">&times;</span>
+          <h2 id="popupTitle"></h2>
+          <p id="popupText"></p>
+      </div>
+  </div>
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
@@ -628,13 +622,8 @@
   <footer id="footer" class="footer dark-background">
 
       <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright - </span> <strong class="px-1 sitename">Eniet Ngaoundéré</strong> <span> - Tous droits réservés</span></p>
+      <p>© <span>Copyright - </span> <strong class="px-1 sitename">Eniet Ngaoundéré</strong> <span> - Tous droits réservés - 2025</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
 
@@ -658,6 +647,65 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- Code pour le popup -->
+   <script>
+        document.addEventListener("DOMContentLoaded", function () {
+        const members = document.querySelectorAll(".open-popup");
+        const popup = document.getElementById("popupModal");
+        const popupTitle = document.getElementById("popupTitle");
+        const popupText = document.getElementById("popupText");
+        const closeBtn = document.getElementById("closePopup");
+
+        // Dictionnaire des descriptions des membres
+        const memberDetails = {
+            "directeur": {
+                title: "Mr KOUSSIAKBE JEAN",
+                text: "Il assure la direction technique, administrative, financiere et pedagogique de l’ecole. A ce titre il: • Veille au bon deroulement de l’année scolaire ; • Elabore et met en œuvre les programmes de recherches sous le contrôle de l’inspection de pédagogie competente ; • Developpe des partenariats avec les milieux socioprofessionnels ; • Veille au respect du reglement interieur de l’ecole; • Execute les instructions du ministre chargé de l’enseignement normal et les decisions du conseil d’etablissement ; • Preside tous les conseils à l’exception du conseil d’etalissement ; • Presente au conseil d’etablissement le compte administratif ; • Gere le personnel de l’etablissement ; • Veille au respect des horaires et programmes ; • Organise les vacations decidées par le conseil d’etablissement ;"
+            },
+            "directeur_adjoint": {
+                title: "Mr OUMAROU JEAN CLEMENT",
+                text: "Directeur adjoint de l'ENIET de Ngaoundéré. Il remplace le Directeur en son absence et peut le représenter en cas d’empêchement."
+            },
+            "scolarite": {
+                title: "Mr LOUBA FRANCK",
+                text: "Chef du service de la scolarité et de la documentation. Il est chargé de la tenue et la mise à jour des fichiers relatifs à la scolarité des éléves-maitres , de l’organisation des examens et autres évaluations des eleves-maitres, en relation avec le service des etudes et des stages , du suivi des activitée realtives à la vie et à l’assistance scolaires , de la bibliotheque et des archives  et de la reproduction et la diffusion de toute documentation pedagogique"
+            },
+            "etudes": {
+                title: "Mr GARGA ALAIN RICHARD",
+                text: "Chef du service des études et des stages. Ils s'occupe des enseignements, formations en alternance, formations continues, recherches dans le domaine pedagogique et de la discipline"
+            },
+            "materiel": {
+                title: "Mme MPAMI YOMI FLORENCE",
+                text: "Chef du service du matériel, de la maintenance et des infrastructures. Elle gère les ateliers, les salles specialisées et de la matière d’œuvre. L'organisation et du suivi des travaux pratiques  et la maintenance des équipements et des infrastructures"
+            }
+        };
+
+        // Gérer l'ouverture du pop-up
+        members.forEach(member => {
+            member.addEventListener("click", function () {
+                let memberKey = this.getAttribute("data-member");
+                if (memberDetails[memberKey]) {
+                    popupTitle.textContent = memberDetails[memberKey].title;
+                    popupText.textContent = memberDetails[memberKey].text;
+                    popup.style.display = "flex";
+                }
+            });
+        });
+
+        // Fermer le pop-up
+        closeBtn.addEventListener("click", function () {
+            popup.style.display = "none";
+        });
+
+        // Fermer le pop-up en cliquant en dehors du contenu
+        window.addEventListener("click", function (event) {
+            if (event.target === popup) {
+                popup.style.display = "none";
+            }
+        });
+    });
+</script>
 
 </body>
 
