--- a/index.html
+++ b/index.html
@@ -661,23 +661,23 @@
         const memberDetails = {
             "directeur": {
                 title: "Mr KOUSSIAKBE JEAN",
-                text: "Il assure la direction technique, administrative, financiere et pedagogique de l’ecole. A ce titre il: • Veille au bon deroulement de l’année scolaire ; • Elabore et met en œuvre les programmes de recherches sous le contrôle de l’inspection de pédagogie competente ; • Developpe des partenariats avec les milieux socioprofessionnels ; • Veille au respect du reglement interieur de l’ecole; • Execute les instructions du ministre chargé de l’enseignement normal et les decisions du conseil d’etablissement ; • Preside tous les conseils à l’exception du conseil d’etalissement ; • Presente au conseil d’etablissement le compte administratif ; • Gere le personnel de l’etablissement ; • Veille au respect des horaires et programmes ; • Organise les vacations decidées par le conseil d’etablissement ;"
+                text: " Directeur de l'ENIET de Ngaoundére, il assure la direction technique, administrative, financiere et pedagogique de l’ecole. A ce titre il: • Veille au bon deroulement de l’année scolaire ; • Elabore et met en œuvre les programmes de recherches sous le contrôle de l’inspection de pédagogie competente ; • Developpe des partenariats avec les milieux socioprofessionnels ; • Veille au respect du reglement interieur de l’ecole; • Execute les instructions du ministre chargé de l’enseignement normal et les decisions du conseil d’etablissement ; • Preside tous les conseils à l’exception du conseil d’etalissement ; • Presente au conseil d’etablissement le compte administratif ; • Gere le personnel de l’etablissement ; • Veille au respect des horaires et programmes ; • Organise les vacations decidées par le conseil d’etablissement ;"
             },
             "directeur_adjoint": {
                 title: "Mr OUMAROU JEAN CLEMENT",
-                text: "Directeur adjoint de l'ENIET de Ngaoundéré. Il remplace le Directeur en son absence et peut le représenter en cas d’empêchement."
+                text: "Directeur adjoint de l'ENIET de Ngaoundéré, il remplace le Directeur en son absence et peut le représenter en cas d’empêchement."
             },
             "scolarite": {
                 title: "Mr LOUBA FRANCK",
-                text: "Chef du service de la scolarité et de la documentation. Il est chargé de la tenue et la mise à jour des fichiers relatifs à la scolarité des éléves-maitres , de l’organisation des examens et autres évaluations des eleves-maitres, en relation avec le service des etudes et des stages , du suivi des activitée realtives à la vie et à l’assistance scolaires , de la bibliotheque et des archives  et de la reproduction et la diffusion de toute documentation pedagogique"
+                text: "Chef du service de la scolarité et de la documentation, il est chargé de la tenue et la mise à jour des fichiers relatifs à la scolarité des éléves-maitres , de l’organisation des examens et autres évaluations des eleves-maitres, en relation avec le service des etudes et des stages , du suivi des activitée realtives à la vie et à l’assistance scolaires , de la bibliotheque et des archives  et de la reproduction et la diffusion de toute documentation pedagogique"
             },
             "etudes": {
                 title: "Mr GARGA ALAIN RICHARD",
-                text: "Chef du service des études et des stages. Ils s'occupe des enseignements, formations en alternance, formations continues, recherches dans le domaine pedagogique et de la discipline"
+                text: "Chef du service des études et des stages, Il s'occupe des enseignements, formations en alternance, formations continues, recherches dans le domaine pedagogique et de la discipline"
             },
             "materiel": {
                 title: "Mme MPAMI YOMI FLORENCE",
-                text: "Chef du service du matériel, de la maintenance et des infrastructures. Elle gère les ateliers, les salles specialisées et de la matière d’œuvre. L'organisation et du suivi des travaux pratiques  et la maintenance des équipements et des infrastructures"
+                text: "Chef du service du matériel, de la maintenance et des infrastructures, elle gère les ateliers, les salles specialisées et de la matière d’œuvre. L'organisation et du suivi des travaux pratiques  et la maintenance des équipements et des infrastructures"
             }
         };
 
