--- a/team.html
+++ b/team.html
@@ -40,11 +40,11 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html" class="active">Accueil</a></li>
-          <li><a href="about.html">À propos</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="activites.html">Nos activités</a></li>
-          <li><a href="team.html">Equipe administrative</a></li>
+          <li><a href="#hero" class="active">Accueil</a></li>
+          <li><a href="/about.html">À propos</a></li>
+          <li><a href="/services.html">Services</a></li>
+          <li><a href="/ativités.html">Nos activités</a></li>
+          <li><a href="/equipe.html">Equipe administrative</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
